clusters/home/apps/datascience/datascience/configs/datascience-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: datascience-ingressroute
  namespace: datascience
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://datascience.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Datascience
    gethomepage.dev/group: Programming
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: datascience # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Datascience
    #gethomepage.dev/widget.type: "datascience"
    #gethomepage.dev/widget.url: "https://datascience.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`datascience.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: proxy-public
      port: 80
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: datascience-certificate-secret
